tests/ui/consts/const-assert-unchecked-ub.stderr
error[E0080]: `assume` called with `false`
  --> $DIR/const-assert-unchecked-ub.rs:3:5
   |
LL |     std::hint::assert_unchecked(n < 32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
